--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -48,6 +49,7 @@ dependencies {
 
     implementation "android.arch.lifecycle:runtime:$project.arch"
     implementation "android.arch.lifecycle:extensions:$project.arch"
+    implementation 'com.android.support:support-v4:28.0.0'
     annotationProcessor "android.arch.lifecycle:compiler:$project.arch"
 
     implementation "android.arch.navigation:navigation-fragment:$project.navigation"
